--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,14 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-i18n": "4.25.21",
-    "@strapi/plugin-seo": "^1.9.10",
-    "@strapi/plugin-users-permissions": "4.25.21",
-    "@strapi/strapi": "4.25.21",
-    "better-sqlite3": "8.7.0"
+    "@strapi/plugin-seo": "^2.0.8",
+    "@strapi/plugin-users-permissions": "5.11.2",
+    "@strapi/strapi": "5.11.2",
+    "better-sqlite3": "11.3.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.0.0",
+    "styled-components": "^6.0.0"
   },
   "author": {
     "name": "A Strapi developer"
