--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='--inspect' next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -15,14 +15,14 @@
     "@types/negotiator": "^0.6.2",
     "@types/node": "20.8.9",
     "@types/qs": "^6.9.9",
-    "@types/react": "18.2.33",
-    "@types/react-dom": "18.2.14",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
     "classnames": "^2.3.2",
     "negotiator": "^0.6.3",
-    "next": "^14.0.0",
+    "next": "15.2.2",
     "qs": "^6.11.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-icons": "^4.11.0",
     "react-markdown": "^9.0.0",
     "react-slideshow-image": "^4.3.0",
@@ -33,5 +33,9 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5"
+  },
+  "resolutions": {
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4"
   }
 }
