--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@strapi/plugin-seo": "^2.0.8",
-    "@strapi/plugin-users-permissions": "5.11.2",
-    "@strapi/strapi": "5.11.2",
+    "@strapi/plugin-users-permissions": "^5.12.5",
+    "@strapi/strapi": "^5.12.5",
     "better-sqlite3": "11.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
