--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,6 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.4.2",
-    "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18",
     "@types/negotiator": "^0.6.2",
     "@types/node": "20.8.9",
     "@types/qs": "^6.9.9",
@@ -30,9 +28,11 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5"
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/postcss": "^4.1.4",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.4"
   },
   "resolutions": {
     "@types/react": "19.0.10",
